# euphoria-messenger

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  keystore.jks  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: image.c  util.c
app/src/main/res/anim/: alpha_in.xml  side_left.xml  side_right.xml
app/src/main/res/drawable/: badge_counter.xml  color_picker_swatch.xml  ic_vector_access_time.xml  ic_vector_apple.xml  ic_vector_folder.xml  ic_vector_gift.xml  ic_vector_link_arrow.xml  ic_vector_microphone.xml  ic_vector_movie.xml  ic_vector_music_note.xml  ic_vector_note.xml  ic_vector_notes.xml  ic_vector_notifications.xml  ic_vector_people.xml  ic_vector_pets.xml  ic_vector_rocket.xml  ic_vector_smartphone.xml  ic_vector_sweet.xml  ic_vector_web.xml  ic_vector_win.xml  message_drop_shadow_dark.xml  message_drop_shadow_white.xml  online_indicator.xml  play_circle.xml  unread_indicator.xml
app/src/main/res/layout/: activity_analise.xml  activity_dialog_attachments.xml  activity_friends.xml  activity_image_view.xml  activity_main.xml  activity_messages.xml  activity_open_chat.xml  activity_settings.xml  activity_welcome.xml  app_bar_main.xml  appbar.xml  attach_audio.xml  attach_doc.xml  attach_message.xml  attach_photo.xml  attach_video.xml  color_picker_swatch.xml  drawer_header.xml  fragment_dialogs.xml  list_item_audio.xml  list_item_dialog.xml  list_item_doc.xml  list_item_friend.xml  list_item_link.xml  list_item_message.xml  msg_attach_audio.xml  msg_attach_photo.xml  tab_appbar.xml  toolbar.xml  (+1 more)
(+108 files in other folders)
